# RandomVariable

./: .gitignore  CMakeLists.txt  importTextFile.m  readme.md
MATLAB/: generateTextFile.m
MATLAB_txt_IO/: example.m  generateTextFile.m  importTextFile.m  se2_example.m
MATLAB_txt_IO/3D_sim/: generate_data_SE2.m
MATLAB_txt_IO/linear_system/: mass_spring_damper_generator.m
cmake/: Config.cmake.in  RandomVariableConfig.cmake
cpp/: CMakeLists.txt  Exporter.h  RVIO.h  RV_IO.h  cpp_parser.cpp  data_parser.h
cpp_parser/: CMakeLists.txt  Exporter.h  cpp_parser.cpp  data_parser.h
examples/: CMakeLists.txt  example.cpp
include/: CMakeLists.txt  RVIO.h
include/RandomVariable/: RV.h  RVIO.h
linear_system/: mass_spring_damper_generator.m
linear_system/data/: msd_acc.txt  msd_ground_truth.txt  msd_pos.txt
src/: RV.h  RVIO.h
